# emart23.com

./: Dockerfile  HELPER.md  README.md  TODO.md  docker-compose.yml  init.sql  manage.py  pyproject.toml  requirements.txt  terms-and-conditions.html
BACKUPS/: docker-compose.yml
emart23/: asgi.py  settings.py  urls.py  wsgi.py
emart23/settings/: common.py  development.py  production.py  staging.py  third_party_configs.py
nginx/: nginx.conf
static/: staticfiles.json
todo/: admin.py  models.py
users/: admin.py  models.py
utilities/management/commands/: initiate_admin.py
utils/: snippets.py
